--- a/engine3/test/systemStateSelectors.spec.yaml
+++ b/engine3/test/systemStateSelectors.spec.yaml
@@ -7,6 +7,7 @@ suites:
         in:
           - !include ./data/testSystemState.yaml
         out:
+          presetId: "test-preset"
           sectionId: "test-section"
           stepId: "test-step"
   
