--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "immer": "^10.1.1",
     "js-yaml": "^4.1.0",
     "json-e": "^4.8.0"
   }
